fixed mini gap on the carousel

--- a/queries.css
+++ b/queries.css
@@ -112,10 +112,12 @@
     background-color: var(--carouselControlTheme);
     opacity: 0.6;
     width: 10%;
+    margin: 0 -1px; 
   }
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
     filter: invert(0);
+    width: 100%;
   }
 
   /* DISHES CONTAINER */
